# uqm

./: .clippy.toml  .gitignore  .rustfmt.toml  PHASE3_REPORT.md  REPORT.md  RUST_UIO_MOUNT_FIX_REPORT.md  content  draw_fontchar_impl.rs  enable_rust.sh  phase2_verification_steps.md  phase3_run_sequence.txt  phase3_verification_report.md  primer.txt  prompt_for_next_session.txt  run_phase3_extended.sh  run_phase3_manual.sh  run_phase3_test.sh  test_copy_fix  test_copy_fix.rs  uqm_run_output.txt  video_presentation_summary.md
rust/: Cargo.toml  biadaptive_tests.rs  build.rs  update_scaling.py
rust/.cargo/: config.toml
rust/examples/: test_rodio.rs
rust/harness/: menu_binding_accessor.c  menu_binding_accessor.h  menu_binding_probe.c  p00_harness.c  p00_harness.h  run_menu_binding_probe.sh  run_p00_harness.sh  sdl_surface_accessors.c  sdl_surface_accessors.h
rust/probes/: p00_probes.rs  run_p00_probes.sh
rust/proptest-regressions/automation/: scheduler.txt
rust/scripts/: battle-v1.json  comm-encounter-v1.json  explore-planet-v1.json  gen_race.py  hard-hang.json  inactive-smoke.json  main-menu-v1.json  starbase-visit-v1.json  state-sync-v1.json  watchdog-v1.json
rust/src/: bridge_log.rs  c_bindings.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs  memory.rs
rust/src/automation/: artifact.rs  capture.rs  child_session.rs  coordinator.rs  error.rs  identity.rs  input.rs  input_ffi.rs  lifecycle.rs  (+11 more)
rust/tests/: input_integration_tests.rs  memory_integration.rs  phase2_integration_tests.rs  sdl_driver_tests.rs  sound_integration.rs  zip_integration_test.rs
(+1870 files in other folders)
