[package]
name = "uqm"
version = "0.8.0"
edition = "2021"

[lib]
name = "uqm_rust"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cc = "1.0"
bindgen = "0.70"

[dependencies]
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
sdl2 = "0.37"
gl = "0.14"
crossbeam = "0.8"
parking_lot = "0.12"
lru = "0.12"
image = "0.25"
portable-atomic = "1.9"
tracing = "0.1"
log = "0.4"
lewton = "0.10"
ogg = "0.9"
xbrz-rs = "0.1.0"
memoffset = "0.9.1"
rodio = { version = "0.19", default-features = false, features = ["wav", "vorbis"] }
mod_player = "0.1"
fast_image_resize = "5.0"

[dev-dependencies]
tempfile = "3"
insta = "1.34"
proptest = "1.4"
rstest = "0.18"
serial_test = "3.0"
